--- a/Resources/services.yaml
+++ b/Resources/services.yaml
@@ -5,4 +5,4 @@ services:
         public: true
     phpcs.listeners.install:
         class: Dotfiles\Plugins\PHPCSFixer\Listeners\InstallSubscriber
-        tags: { name: "event_subscribers" }
+        tags: { name: "event_subscriber" }
